# tcssh

./: Cargo.toml  Readme.md  build.rs
.cargo/: config
src/: app.rs  candstr.rs  child.rs  cluster.rs  config.rs  er.rs  evaluate.rs  g.rs  getopt.rs  helper.rs  host.rs  is_xfile.rs  macros.rs  main.rs  reader.rs  resolver.rs  resolver.rs.2018  retile.rs  send_text.rs  server.rs  text2x11.rs  tk2gtk.rs  tmpnam.rs  wait_children.rs  x.rs
